# BioBrain

./: .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  Info.plist  README.md
docs/superpowers/specs/: 2026-03-29-biobrain-design.md
src/: main.cpp
src/audio/: VocalSynthesizer_linux.cpp
src/compute/: CPUBackend.cpp  CPUBackend.h  CUDABackend.cu  CUDABackend.h  ComputeBackend.h  MetalBackend.h  MetalBackend.mm
src/core/: AdExNeuron.cpp  AdExNeuron.h  BrainRegion.cpp  BrainRegion.h  HardwareProfile.cpp  HardwareProfile.h  HodgkinHuxleyNeuron.cpp  HodgkinHuxleyNeuron.h  IzhikevichNeuron.cpp  IzhikevichNeuron.h  LIFNeuron.cpp  LIFNeuron.h  Neuron.h  Simulation.cpp  Simulation.h  SpikeEvent.h  SpikeRouter.cpp  SpikeRouter.h  Synapse.cpp  Synapse.h
src/cuda/: adex.cu  hodgkin_huxley.cu  izhikevich.cu  synapse_update.cu
src/gui/: ActivityMapWidget.cpp  ActivityMapWidget.h  BackendConfigPanel.cpp  BackendConfigPanel.h  MainWindow.cpp  MainWindow.h  NeuronParamEditor.cpp  NeuronParamEditor.h  RegionTreeWidget.cpp  RegionTreeWidget.h  SpikeRasterWidget.cpp  SpikeRasterWidget.h  WebcamWidget.cpp  WebcamWidget.h
src/harness/: DebugAPI.cpp  DebugAPI.h  RestHarness.cpp  RestHarness.h  main_harness.cpp  main_headless.cpp
src/input/: RetinalEncoder.cpp  RetinalEncoder.h  WebcamCapture.h  WebcamCapture.mm  WebcamCapture_linux.cpp
src/metal/: adex.metal  hodgkin_huxley.metal  izhikevich.metal  synapse_update.metal
src/plasticity/: DopamineSTDP.cpp  DopamineSTDP.h  NeuromodulatorySTDP.cpp  NeuromodulatorySTDP.h  PlasticityRule.h  STDP.cpp  STDP.h
